--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
     "expo": "~43.0.0",
     "expo-barcode-scanner": "~11.1.2",
     "expo-camera": "~12.0.3",
