--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.x",
     "@react-navigation/stack": "^5.x",
+    "@reduxjs/toolkit": "^1.6.2",
     "expo": "~43.0.0",
     "expo-barcode-scanner": "~11.1.2",
     "expo-camera": "~12.0.3",
@@ -23,12 +24,14 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-redux": "^7.1.20",
     "typescript": "~4.3.5"
   },
   "private": true
