--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-barcode-scanner": "~11.1.2",
     "expo-camera": "~12.0.3",
     "expo-status-bar": "~1.1.0",
+    "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
