--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.x",
     "@react-navigation/stack": "^5.x",
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.23.0",
     "expo": "~43.0.0",
     "expo-barcode-scanner": "~11.1.2",
     "expo-camera": "~12.0.3",
@@ -22,9 +23,12 @@
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modalize": "^2.0.10",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.5"
   },
