--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.5"
   },
@@ -37,6 +37,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-redux": "^7.1.20",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.3.5"
   },
   "private": true
